objects/ssot__AcademicTermEnrollment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AcademicStanding__c</fullName>
        <label>Academic Standing</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AcademicTermId__c</fullName>
        <label>Academic Term</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AcademicTermRgstrTimelineId__c</fullName>
        <label>Academic Term Registration Timeline</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CumulativeGradePointAvgNumber__c</fullName>
        <label>Cumulative Grade Point Average</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnrollmentDate__c</fullName>
        <label>Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EnrollmentReason__c</fullName>
        <label>Enrollment Reason</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnrollmentStatus__c</fullName>
        <label>Enrollment Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExitDate__c</fullName>
        <label>Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ExitReasonText__c</fullName>
        <label>Exit Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HoursAttemptedCount__c</fullName>
        <label>Hours Attempted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Academic Term Enrollment Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearnerAccountId__c</fullName>
        <label>Learner Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LearnerContactId__c</fullName>
        <label>Learner Contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OpportunityId__c</fullName>
        <label>Opportunity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StudentAcademicLevel__c</fullName>
        <label>Student Academic Level</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StudyYearClassification__c</fullName>
        <label>Study Year Classification</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TermGradePointAverageNumber__c</fullName>
        <label>Term Grade Point Average</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817604031_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AcademicTermEnrollment_AcademicTermI_rel</label>
        <referenceTo>ssot__AcademicTerm__dlm</referenceTo>
        <relationshipLabel>AcademicTermEnrollment_AcademicTermI_rel</relationshipLabel>
        <relationshipName>rel_1719817604031_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817761719_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AcademicTermEnrollment_LearnerAccoun_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>AcademicTermEnrollment_LearnerAccoun_rel</relationshipLabel>
        <relationshipName>rel_1719817761719_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819806730_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AcademicTermEnrollment_OpportunityId_rel</label>
        <referenceTo>ssot__Opportunity__dlm</referenceTo>
        <relationshipLabel>AcademicTermEnrollment_OpportunityId_rel</relationshipLabel>
        <relationshipName>rel_1719819806730_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>